# notes

./: .gitignore  Cargo.toml  Makefile  compose.yaml
ai/: Dockerfile  requirements.txt
ai/src/: embedding.py  handler.py  vector_db.py
notes/: Cargo.toml  Dockerfile  LICENSE  README.md
notes/src/: ai_embedding.rs  backend.rs  lib.rs  repository.rs  service.rs  ui.rs  widgets.rs
src/: app.rs  backend.rs  editor_handler.rs  lib.rs  main.rs  service.rs  ui.rs
