[package]
name = "notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.83"
argh = "0.1.12"
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
rand = "0.8.5"
ratatui = "0.26.2"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = "0.31.0"
serde_json = "1.0.117"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"]}
